opam-version: "2.0"
maintainer: "maintenance@identity-function.com"
authors: ["Mindy Preston"]
homepage: "https://github.com/yomimono/ocaml-bun"
bug-reports: "https://github.com/yomimono/ocaml-bun/issues"
dev-repo: "git+https://github.com/yomimono/ocaml-bun.git"
license: "MIT"
build: [[ "jbuilder" "build" "-p" name "-j" jobs ]]
build-test: [[ "jbuilder" "runtest" ]]
depends: [
  "jbuilder" {build}
  "bos" {>= "0.2.0" }
  "cmdliner" {>= "1.0.0" }
  "fpath"
  "rresult" {>= "0.3.0" }
  "astring"
  "crowbar" {test}
  "spawn" {>= "0.10.1"}
  "afl" {= "2.52b"}
  "ocaml" {>= "4.04.0"}
]
